# openzfs-fork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  META  Makefile.am  README.md  configure.ac
.github/workflows/: codeql-windows.yml  windows-build-test.yml  windows-build-test.yml-legacy  windows-build.yml
cmd/: CMakeLists.txt  Makefile.am  arc_summary  arcstat.in  zarcstat.in  zarcsummary
cmd/os/windows/zed_service/: CMakeLists.txt  jsmn.h  jsmn_utils.h  memfile.h  ops_common.c  ops_common.h  ops_crypto.c  ops_crypto.h  ops_export.c  ops_export.h  ops_import.c  ops_import.h  ops_mount.c  ops_mount.h  ops_status.c  ops_status.h  pipe_rpc.h  zed_service.c
cmd/os/windows/zfs_tray/: CMakeLists.txt  import_window.c  import_window.h  pass_prompt.c  pass_prompt.h  pool_json.c  pool_json.h  resource.h  resource.rc  rpc_client.c  rpc_client.h  tray.c
cmd/zed/: CMakeLists.txt  Makefile.am  zed.c  zed.h  zed_conf.c  zed_log.c
cmd/zed/agents/: fmd_api.c  fmd_api.h
cmd/zed/os/windows/zed.d/: all-debug.ps1  system_boot.ps1  zed.rc.ps1
cmd/zed/zed.d/: Makefile.am
cmd/zfs_remoted/: CMakeLists.txt  backend_disk.c  backend_file.c  zfs_remoted.c  zfs_remoted.h
cmd/zinject/: CMakeLists.txt  zinject.c
config/: Rules.am  always-compiler-options.m4  always-system.m4  kernel-fs-parse.m4  kernel-macos-headers.m4  kernel.m4  user-libfetch.m4  user.m4  zfs-build.m4
contrib/: Makefile.am
etc/: Makefile.am
include/: Makefile.am  libzfs.h  libzutil.h  zfs_fletcher.h
lib/: CMakeLists.txt  Makefile.am
lib/libspl/: CMakeLists.txt  Makefile.am  assert.c  atomic.c  libspl_impl.h  random.c  timestamp.c  tunables.c
lib/libspl/include/: Makefile.am  atomic.h  stdlib.h
lib/libspl/include/os/freebsd/sys/ia32/: asm_linkage.h
lib/libspl/include/os/linux/sys/ia32/: asm_linkage.h
lib/libspl/include/os/macos/sys/: Makefile.am  param.h  stat.h
lib/libspl/include/os/macos/sys/ia32/: asm_linkage.h
lib/libspl/include/os/windows/: err.h  fcntl.h  inttypes.h  regex.h  signal.h  unistd.h  wfunopen.h  wosix.h
lib/libspl/include/os/windows/sys/: kstat.h  param.h  time.h  types.h
lib/libspl/include/rpc/: xdr.h
lib/libspl/include/sys/: asm_linkage.h  debug.h  dkio.h  isa_defs.h  mod.h  simd.h  tunables.h  uio.h
lib/libspl/os/windows/: getmntany.c  posix.c
lib/libzfs/: CMakeLists.txt  Makefile.am  libzfs.abi  libzfs_changelist.c  libzfs_crypto.c  libzfs_dataset.c  libzfs_diff.c  libzfs_iter.c  libzfs_mount.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_share_nfs.c  libzfs_util.c
lib/libzfs/os/freebsd/: libzfs_compat.c  libzfs_zmount.c
lib/libzfs/os/linux/: libzfs_mount_os.c  libzfs_util_os.c
lib/libzfs/os/macos/: libzfs_pool_os.c  libzfs_share_nfs.c  libzfs_share_smb.c  libzfs_util_os.c
lib/libzfs/os/windows/: libzfs_disk_os.cpp  libzfs_mount_os.c  libzfs_pool_os.c  libzfs_share_nfs.c  libzfs_share_smb.c  libzfs_util_os.c  libzfs_weakpragma.c
module/: CMakeLists.txt  Kbuild.in  Makefile.bsd  Makefile.in
module/icp/: CMakeLists.txt  illumos-crypto.c
module/icp/algs/aes/: aes_impl.c  aes_impl_aesni.c  aes_impl_generic.c  aes_impl_x86-64.c
module/icp/algs/blake3/: blake3_impl.c
module/icp/algs/modes/: gcm.c  modes.c
module/icp/algs/sha2/: sha256_impl.c  sha512_impl.c
module/icp/asm-aarch64/blake3/: b3_aarch64_sse2.S  b3_aarch64_sse41.S
module/icp/asm-x86_64/aes/: aes_aesni.S
module/icp/asm-x86_64/modes/: aesni-gcm-avx2-vaes.S  aesni-gcm-x86_64.S  gcm_pclmulqdq.S  ghash-x86_64.S
module/icp/asm-x86_64/sha2/: sha256-x86_64.S  sha512-x86_64.S
module/icp/core/: kcf_mech_tabs.c
module/icp/include/aes/: aes_impl.h
module/icp/include/modes/: gcm_impl.h  modes.h
module/lua/: ldo.c
module/lua/setjmp/: setjmp_aarch64.S
module/nvpair/: nvpair.c
module/os/freebsd/zfs/: vdev_label_os.c
module/os/linux/zfs/: zpl_super.c
module/os/macos/: Makefile.am
module/os/macos/spl/: spl-proc.c  spl-taskq.c
module/os/macos/zfs/: abd_os.c  spa_misc_os.c  vdev_disk.c  vdev_file_os.c  zfs_acl.c  zfs_boot.cpp  zfs_dir.c  zfs_file_os.c  zfs_vfsops.c  zfs_vnops_os.c  zfs_vnops_osx.c  zfs_vnops_osx_lib.c  zfs_znode_os.c  zvolIO.cpp  zvol_os.c
module/os/windows/: CMakeLists.txt  OpenZFS.inf  README.md  debug.c  driver.c
module/os/windows/spl/: CMakeLists.txt  spl-condvar.c  spl-cred.c  spl-ddi.c  spl-err.c  spl-kmem.c  spl-kstat.c  spl-mount.c  spl-mutex.c  spl-policy.c  spl-rwlock.c  spl-seg_kmem.c  spl-taskq.c  spl-thread.c  spl-vmem.c  spl-vnode.c  spl-windows.c
module/os/windows/zfs/: CMakeLists.txt  sysctl_os.c  vdev_disk.c  vdev_remote_os.c  zfs_acl.c  zfs_ctldir.c  zfs_debug.c  zfs_dir.c  zfs_file_os.c  zfs_ioctl_os.c  zfs_racct.c  zfs_vfsops.c  zfs_vnops_os.c  zfs_vnops_windows.c  zfs_vnops_windows_lib.c  zfs_vnops_windows_mount.c  zfs_vnops_windows_xattr.c  zfs_znode_os.c  zvol_os.c
module/os/windows/zvol/: CMakeLists.txt  OpenZVOL.inf  openzvol.c  zfs_windows_zvol.c  zfs_windows_zvol_scsi.c  zfs_windows_zvol_wmi.c
module/zcommon/: CMakeLists.txt  zfeature_common.c  zfs_fletcher.c  zfs_prop.c  zpool_prop.c  zprop_common.c
module/zfs/: CMakeLists.txt  abd.c  arc.c  blake3_zfs.c  blkptr.c  dbuf.c  ddt_zap.c  dmu_recv.c  dmu_tx.c  dnode.c  dsl_crypt.c  dsl_dataset.c  dsl_destroy.c  dsl_pool.c  dsl_scan.c  metaslab.c  mmp.c  sa.c  spa.c  spa_errlog.c  spa_misc.c  txg.c  uberblock.c  vdev.c  vdev_file.c  vdev_indirect_mapping.c  vdev_label.c  vdev_queue.c  vdev_raidz_math.c  vdev_remote.c  zap_leaf.c  zfs_fuid.c  zfs_ioctl.c  zfs_log.c  zfs_sa.c  zfs_vnops.c  zfs_znode.c  zio.c  zvol.c
module/zfs/cluster/: DESIGN.md  INTEGRATION_PATCHES.h  cluster_dlm.c  cluster_heartbeat.c  cluster_membership.c  cluster_messaging.c  cluster_metaslab.c  cluster_recovery.c  cluster_spa.c  cluster_sync.c  cluster_txg.c  cluster_zil.c
module/zstd/: CMakeLists.txt
module/zstd/include/: limits.h  stddef.h  stdint.h  string.h
module/zstd/lib/common/: bits.h  bitstream.h  compiler.h  cpu.h  mem.h  xxhash.c  xxhash.h  zstd_common.c  zstd_internal.h
module/zstd/lib/compress/: zstd_compress_internal.h  zstd_ldm.c
scripts/: kpi_check.py  pkg_macos.sh  zfs-tests.sh
(+171 files in other folders)
